2008-07-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Convert #xmlelement returned by the
	'c2s_stream_features' hook to #xmlel.

2008-07-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/cyrsasl.erl, src/cyrsasl_anonymous.erl, src/cyrsasl_digest.erl,
	src/cyrsasl_plain.erl, src/ejabberd_c2s.erl: Errors are now atoms, not
	strings anymore.

2008-07-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_sm.erl: Convert to exmpp.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: Use the new clause of
	exmpp_stanza:reply_with_error/2, exmpp_iq:error/2,
	exmpp_iq:error_without_original/2 and the new
	exmpp_jid:make_bare_jid/1.

	* src/jlib.erl: Add function short_bare_jid/1.

	* src/ejabberd_sm.erl: Forgot to convert a <presence/> from the new to
	the old record.

	* src/ejabberd_c2s.erl: Use jlib:short_bare_jid/1. Rewrite
	is_auth_packet/1 to use new formats. Don't convert <presence/> before
	calling ejabberd_sm:set_presence/7. Don't convert broadcast children,
	because it's an internal special element.

	* src/acl.erl: Convert to exmpp.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_in.erl: acl doesn't require
	conversion anymore.

	* src/ejabberd_router.erl: Use a function to convert to old
	structures instead of duplicating code inside the module.

	* src/gen_iq_handler.erl: Convert to exmpp.

	* src/ejabberd_sm.erl, src/ejabberd_c2s.erl: Don't convert <iq/>
	before calling gen_iq_handler:handle/7.

	* src/ejabberd_local.erl: Convert to exmpp.

	* src/jlib.erl: Accept new #xmlel in functions that create #iq. A
	warning is printed when these functions are called with an old
	#xmlelement.

	* src/ejabberd_router.erl: Change warning message.

	* src/ejabberd_sm.erl, src/ejabberd_c2s.erl, src/ejabberd_local.erl,
	src/gen_iq_handler.erl: Do not use the #iq record anymore internally.
	However it's still created and passed to other modules.
